Fix build and continue working on SPIRV

--- a/code/application/CMakeLists.txt
+++ b/code/application/CMakeLists.txt
@@ -1,18 +1,18 @@
 #-------------------------------------------------------------------------------
-# anyfx_application
+# gpulang_application
 #-------------------------------------------------------------------------------
 
 set(CMAKE_CXX_STANDARD 17)
 
-fips_begin_app(anyfx_application cmdline)
+fips_begin_app(gpulang_application cmdline)
     fips_vs_warning_level(3)
-    fips_include_directories(
+    target_include_directories(gpulang_application PUBLIC
          ${CMAKE_CURRENT_SOURCE_DIR}
          ${ANYFX_ROOT}/code/util
          )
-    fips_deps(anyfx_compiler anyfx_util antlr4 mcpp glslang)
+    fips_deps(gpulang_compiler gpulang_util antlr4 mcpp glslang)
     if(FIPS_LINUX)
-	    fips_deps(anyfxc stdc++fs)
+	    fips_deps(gpulang_compiler stdc++fs)
     endif()
     fips_files(
          shadercompilerapp.cc
