--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,8 +1,8 @@
-fips_add_subdirectory(api)
-fips_add_subdirectory(compiler)
-fips_add_subdirectory(util)
-fips_add_subdirectory(test)
+add_subdirectory(api)
+add_subdirectory(compiler)
+add_subdirectory(util)
+add_subdirectory(test)
 
 IF(BUILD_COMPILER)
-fips_add_subdirectory(application)
+add_subdirectory(application)
 ENDIF()
