Another billion changes and fixes

--- a/code/test/CMakeLists.txt
+++ b/code/test/CMakeLists.txt
@@ -22,6 +22,10 @@ fips_begin_app(gpulang_test cmdline)
         apitest.cc
     )
 
+    fips_files_ex(shaders
+        *.gpul
+    )
+
     fips_deps(gpulang_compiler gpulang_reflection)
 
 fips_end_app()
