Starting on a basic app to load shaders and run them.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -3,6 +3,10 @@ add_subdirectory(compiler)
 add_subdirectory(util)
 add_subdirectory(test)
 
+IF(BUILD_GPULANG_APP)
+add_subdirectory(app)
+ENDIF()
+
 IF(BUILD_COMPILER)
 add_subdirectory(application)
 ENDIF()
