--- a/code/api/CMakeLists.txt
+++ b/code/api/CMakeLists.txt
@@ -9,8 +9,8 @@ fips_deps(gpulang_util)
 target_include_directories(gpulang_reflection PUBLIC
 	${GPULANG_ROOT}
 	${GPULANG_ROOT}/code/util
-	${GPULANG_ROOT}/api
-	${GPULANG_ROOT}/api/lowlevel
+	${GPULANG_ROOT}/code/api
+	${GPULANG_ROOT}/code/api/lowlevel
 	${VULKAN_INCLUDE_DIR}
 )
 
