--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ if(NOT FIPS_IMPORT)
 	project(gpulang)
     get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
     include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
-	SET(BUILD_GPULANGCOMPILER 1)
+	SET(BUILD_GPULANG_STANDALONE_COMPILER 1)
+    option(BUILD_GPULANG_APP "Build GPULang with the test app" ON)
 	fips_setup()
 endif()
 
