--- a/fips.yml
+++ b/fips.yml
@@ -7,7 +7,10 @@ imports:
         git: https://github.com/gscept/fips-vulkanheaders
       fips-glslang:
         git: https://github.com/gscept/fips-glslang.git
-        cond: "BUILD_GPULANGCOMPILER"
+        cond: "BUILD_GPULANG_STANDALONE_COMPILER"
+      fips-glfw:
+        git: https://github.com/gscept/fips-glfw.git
+        cond: "BUILD_GPULANG_APP"
 
 exports:
     header-dirs:
