Continued work on the compiler and app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,14 @@ if(NOT FIPS_IMPORT)
 	fips_setup()
 endif()
 
+IF(WIN32)
+    add_definitions(-D__WIN32__)
+ELSEIF(UNIX AND NOT APPLE)
+    add_definitions(-D__linux__)
+ELSEIF(APPLE)
+    add_definitions(-D__APPLE__)
+ENDIF()
+
 	set(CMAKE_CXX_STANDARD 20)
 	set(CMAKE_CXX_STANDARD_REQUIRED on)
 	set(CMAKE_CXX_EXTENSIONS OFF)
