--- a/code/app/CMakeLists.txt
+++ b/code/app/CMakeLists.txt
@@ -15,15 +15,9 @@ target_include_directories(gpulang_app PUBLIC
 )
 
 ADD_DEFINITIONS(-DSHADER_FOLDER="${GPULANG_ROOT}/code/app/shaders")
+ADD_DEFINITIONS(-DTEXTURE_FOLDER="${GPULANG_ROOT}/code/app/textures")
 
 
-IF(WIN32)
-    add_definitions(-D__WIN32__)
-ELSEIF(UNIX AND NOT APPLE)
-    add_definitions(-D__linux__)
-ELSEIF(APPLE)
-    add_definitions(-D__APPLE__)
-ENDIF()
 
 fips_files(
 	main.cc
