--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ if(NOT FIPS_IMPORT)
     get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
     include("${FIPS_ROOT_DIR}/cmake/fips.cmake")	
     SET(BUILD_COMPILER 1)
-    option(BUILD_GPULANG_APP "Build GPULang with the test app" ON)
+    option(BUILD_GPULANG_APP "Build GPULang with the test app" OFF)
+    option(BUILD_GPULANG_TEST "Build GPULang with test compilation" OFF)
 	fips_setup()
 endif()
 
