--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,9 +1,12 @@
 add_subdirectory(api)
 add_subdirectory(compiler)
 add_subdirectory(util)
-add_subdirectory(test)
 
 IF(BUILD_GPULANG_APP)
 add_subdirectory(app)
+ENDIF()
+
+IF(BUILD_GPULANG_TEST)
+add_subdirectory(test)
 ENDIF()
 
