--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_subdirectory(api)
-add_subdirectory(compiler)
 add_subdirectory(util)
+
+IF(BUILD_GPULANG_COMPILER)
+add_subdirectory(compiler)
+ENDIF()
 
 IF(BUILD_GPULANG_APP)
 add_subdirectory(app)
