--- a/gpulangcompiler/CMakeLists.txt
+++ b/gpulangcompiler/CMakeLists.txt
@@ -1,8 +1,8 @@
 #-------------------------------------------------------------------------------
-# gpulangcompiler
+# gpulangc
 #-------------------------------------------------------------------------------
 
-fips_begin_app(gpulangcompiler cmdline)
+fips_begin_app(gpulangc cmdline)
      fips_vs_warning_level(3)
      fips_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
      fips_deps(gpulang_compiler antlr4 mcpp glslang)
