--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "gpulang-lsp",
-	"description": "A language server example",
+	"description": "GPULang Language Server Client",
 	"author": "Gustav Sterbrant",
 	"license": "MIT",
 	"version": "1.0.0",
@@ -9,9 +9,12 @@
 		"url": "https://github.com/Microsoft/vscode-extension-samples"
 	},
 	"publisher": "Gustav Sterbrant",
-	"categories": [],
+	"categories": [
+		"Programming Languages"
+	],
 	"keywords": [
-		"multi-root ready"
+		"gpulang",
+		"shader programming"
 	],
 	"engines": {
 		"vscode": "^1.75.0"
@@ -28,7 +31,7 @@
 	"contributes": {
 		"configuration": {
 			"type": "object",
-			"title": "Example configuration",
+			"title": "GPULang Client Configuration",
 			"properties": {
 				"languageServerExample.maxNumberOfProblems": {
 					"scope": "resource",
@@ -48,7 +51,28 @@
 					"description": "Traces the communication between VS Code and the language server."
 				}
 			}
-		}
+		},
+		"languages": [
+			{
+				"id": "gpulang",
+				"aliases": [
+					"GPULang",
+					"gpulang"
+				],
+				"extensions": [
+					"gpul",
+					"gpuh"
+				],
+				"configuration": "./language-configuration.json"
+			}
+		],
+		"grammars": [
+			{
+				"language": "gpulang",
+				"scopeName": "source.gpulang",
+				"path": "./syntaxes/gpulang.tmLanguage.json"
+			}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
