--- a/gpulangserver/CMakeLists.txt
+++ b/gpulangserver/CMakeLists.txt
@@ -5,7 +5,7 @@
 fips_begin_app(gpulang_server cmdline)
     fips_vs_warning_level(3)
      fips_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-     fips_deps(gpulang_compiler antlr4 mcpp glslang lsp)
+     fips_deps(gpulang_compiler antlr4 glslang lsp)
      if (WIN32)
          find_library(WSOCK32_LIBRARY wsock32)
          find_library(WS2_32_LIBRARY ws2_32)
