--- a/gpulangcompiler/CMakeLists.txt
+++ b/gpulangcompiler/CMakeLists.txt
@@ -5,7 +5,7 @@
 fips_begin_app(gpulangc cmdline)
      fips_vs_warning_level(3)
      fips_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-     fips_deps(gpulang_compiler antlr4 mcpp glslang)
+     fips_deps(gpulang_compiler antlr4 glslang)
      if(FIPS_LINUX OR FIPS_APPLE)
           fips_deps(gpulang stdc++fs)
      endif()
