--- a/code/util/CMakeLists.txt
+++ b/code/util/CMakeLists.txt
@@ -16,10 +16,13 @@ fips_files(
 	binwriter.h
 	cmdlineargs.cc
 	cmdlineargs.h
+    containers.cc
+    containers.h
 	memory.cc
 	memory.h
 	serialize.h
     shaderusage.h
+    strings.h
 	textwriter.cc
 	textwriter.h
 	types.h
