--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -14,6 +14,8 @@ env:
 
 jobs:
   build:
+    name: ${{ matrix.name }}-build
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
