--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,12 @@ jobs:
       run: |
         python fips fetch
         python fips set config ${{ matrix.config }}
+        
+    - name: Fix clang version
+      if: startsWith(matrix.os, 'ubuntu')
+      run: |
+        echo "CC=clang-14" >> $GITHUB_ENV
+        echo "CXX=clang++-14" >> $GITHUB_ENV
 
     - name: Configure
       run: |
