--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       if: startsWith(matrix.os, 'ubuntu')
       run: |
         sudo apt-get update
-        sudo apt-get install -y clang-17
+        sudo apt-get install -y clang-17 ninja-build libstdc++-20
         echo "CC=clang-17" >> $GITHUB_ENV
         echo "CXX=clang++-17" >> $GITHUB_ENV
 
