Remove special dep on gpulang for linux and apple

--- a/gpulangcompiler/CMakeLists.txt
+++ b/gpulangcompiler/CMakeLists.txt
@@ -7,7 +7,7 @@ fips_begin_app(gpulangc cmdline)
      fips_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
      fips_deps(gpulang_compiler antlr4 glslang)
      if(FIPS_LINUX OR FIPS_APPLE)
-          fips_deps(gpulang stdc++fs)
+          fips_deps(stdc++fs)
      endif()
      fips_files(
           shadercompilerapp.cc
