More work on code generation language

--- a/code/compiler/CMakeLists.txt
+++ b/code/compiler/CMakeLists.txt
@@ -44,6 +44,8 @@ fips_dir(ast)
         enumeration.h
         function.cc
         function.h
+	generate.cc
+	generate.h
         intrinsics.cc
         intrinsics.h
         preprocessor.cc
