Start working on code gen which can help with sorting type members and intrinsics outside of the compilation

--- a/code/compiler/CMakeLists.txt
+++ b/code/compiler/CMakeLists.txt
@@ -221,6 +221,10 @@ fips_dir(validators)
         validator.cc
         validator.h
     )
+fips_dir(generated)
+    fips_files(
+	swizzle.h
+    )
 
 fips_deps(gpulang_util antlr4 glslang)
 SET_DEFAULT_OUTPUT(gpulang_compiler)
