More code gen work
Had to make some rearrangements in the base code for built in types like program and render state to compile.
Started integrating the generated code into the codebase.

--- a/code/compiler/CMakeLists.txt
+++ b/code/compiler/CMakeLists.txt
@@ -164,9 +164,9 @@ fips_dir(generated)
         intrinsics.cc
         intrinsics.h
         swizzle.h
+        spirv.h
         types.cc
         types.h
-        types_spirv.h
     )
 
 fips_deps(gpulang_util antlr4 glslang)
