Add language configuration system
This allows a project to provide a gpulang_config.json which sets up the target language, include directories and flags to when running the language server

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -25,7 +25,8 @@
 		"aliases": ["GPULang", "gpulang"]
 	}],
 	"activationEvents": [
-		"onLanguage:gpulang"
+		"onLanguage:gpulang",
+		"onStartupFinished"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
