Improve the markdown hover text
Also mark dead code with a token modifier such that editors and themes can mark code as stale

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -67,6 +67,9 @@
 				"configuration": "./language-configuration.json"
 			}
 		],
+		  "semanticTokenModifiers": [
+			{ "id": "unused", "description": "Unused code" }
+		],
 		"grammars": [
 			{
 				"language": "gpulang",
