Fix linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,10 @@ IF(WIN32)
     add_definitions(-D__WIN32__)
 ELSEIF(UNIX AND NOT APPLE)
     add_definitions(-D__linux__)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable -Wno-unused-parameter")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable -Wno-unused-parameter -fbracket-depth=4096")
 ELSEIF(APPLE)
     add_definitions(-D__APPLE__)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable -Wno-unused-parameter")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable -Wno-unused-parameter -fbracket-depth=4096")
 ENDIF()
 
 	set(CMAKE_CXX_STANDARD 20)
