--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,3 +58,17 @@ jobs:
     - name: Build
       run: |
         python fips build
+
+    - name: Notify success on Telegram
+        if: success()
+        run: |
+          curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
+            -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+            -d text="✅ Build succeeded for commit ${{ github.sha }} on ${{ github.repository }}"
+
+      - name: Notify failure on Telegram
+        if: failure()
+        run: |
+          curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
+            -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+            -d text="❌ Build failed for commit ${{ github.sha }} on ${{ github.repository }}"
