--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,16 +59,18 @@ jobs:
       run: |
         python fips build
 
-    - name: Notify success on Telegram
-      if: success()
-      run: |
-          curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
-            -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="✅ Build succeeded for commit ${{ github.sha }} on ${{ github.repository }}"
 
-    - name: Notify failure on Telegram
-      if: failure()
-      run: |
-          curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
-            -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-            -d text="❌ Build failed for commit ${{ github.sha }} on ${{ github.repository }}"
+  notify:
+    runs-on: ubuntu-latest
+    needs: [build]
+    name: Notify
+    if: cancelled() == false
+    steps:
+    - name: Telegram
+      uses: xinthink/action-telegram@v1.1
+      with: 
+        chatId: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        botToken: ${{ secrets.TELEGRAM_CHAT_ID }}
+        jobStatus: ${{ needs.build.result }}
+        skipSuccess: false
+        
