Replace ConstantString in lookup tables for hash value
This improves performance by orders of magnitude.
Python script also sorts intrinsics and member lookups with same hash.
Split intrinsics setup into multiple files to improve compilation time significantly.
Use bit masks to group tokens to avoid doing multiple ANDs and comparisons.
Remove unused swizzle.h and types_spirv.h

--- a/code/compiler/CMakeLists.txt
+++ b/code/compiler/CMakeLists.txt
@@ -140,15 +140,15 @@ fips_dir(generators)
         hlslgenerator.h
         spirvgenerator.cc
         spirvgenerator.h
-	wgslgenerator.cc
-	wgslgenerator.h
+        wgslgenerator.cc
+        wgslgenerator.h
     )
 fips_dir(generators/reflection)
     fips_files(
     	hgenerator.cc
     	hgenerator.h
-	jsgenerator.cc
-	jsgenerator.h
+        jsgenerator.cc
+        jsgenerator.h
     )
 fips_dir(validators)
     fips_files(
@@ -156,10 +156,10 @@ fips_dir(validators)
         validator.h
     )
 fips_dir(generated)
+    fips_files_ex(generated/ *_fragment.cc)
     fips_files(
         intrinsics.cc
         intrinsics.h
-        swizzle.h
         spirv.h
         types.cc
         types.h
