--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,8 +62,8 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          build/gpulangc
-          build/Release/gpulangc.exe
+          ../fips-deploy/gpulang/${{matrix.config}}/gpulangc
+          ../fips-deploy/gpulang/${{matrix.config}}/gpulangc.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
