--- a/gpulangserver/CMakeLists.txt
+++ b/gpulangserver/CMakeLists.txt
@@ -2,7 +2,7 @@
 # gpulangserver
 #-------------------------------------------------------------------------------
 
-fips_begin_app(gpulang_server cmdline)
+fips_begin_app(gpulang_server-${OS_NAME} cmdline)
     fips_vs_warning_level(3)
      fips_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
      fips_deps(gpulang_compiler glslang lsp)
