--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,30 @@ else()
     set(BUILD_GPULANG_APP OFF)
 endif()
 
-if(APPLE)
-    set(OS_NAME "macos-${CMAKE_SYSTEM_PROCESSOR}")
-elseif(WIN32)
-    set(OS_NAME "windows-${CMAKE_SYSTEM_PROCESSOR}")
-elseif(UNIX)
-    set(OS_NAME "linux-${CMAKE_SYSTEM_PROCESSOR}")
+
+if(DEPLOY)
+    string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" ARCH)
+    if(ARCH STREQUAL "amd64" OR ARCH STREQUAL "x86_64")
+        set(ARCH "x86_64")
+    elseif(ARCH STREQUAL "arm64" OR ARCH STREQUAL "aarch64")
+        set(ARCH "aarch64")
+    else()
+        message(WARNING "Unsupported Architecture ${ARCH}")
+    endif()
+
+    string(TOLOWER "${CMAKE_SYSTEM_NAME}" OS)
+    if(OS STREQUAL "darwin")
+        set(PLATFORM "-macos-${ARCH}")
+    elseif(OS STREQUAL "windows")
+        set(PLATFORM "-windows-${ARCH}")
+    elseif(OS STREQUAL "linux")
+        set(PLATFORM "-linux-${ARCH}")
+    else()
+        message(WARNING "Unsupported OS ${OS}")
+    endif()
+    message(STATUS "Platform: ${PLATFORM}")
+else()
+    set(PLATFORM "")
 endif()
 
 IF(WIN32)
