Self sign app for Apple and copy language server to extension

--- a/gpulangcompiler/CMakeLists.txt
+++ b/gpulangcompiler/CMakeLists.txt
@@ -21,3 +21,8 @@ fips_begin_app(gpulangc cmdline)
         OUTPUT_NAME "gpulangc${PLATFORM}"
     )
 fips_end_app()
+
+add_custom_command(TARGET gpulangc POST_BUILD
+    COMMAND codesign --sign - $<TARGET_FILE:gpulangc>
+    COMMENT "Signing the binary with codesign"
+)
