Lots of fixes to the vs code extension
Tries to load distributed binary (with os-arch) and falls back to using none if such a file doesn't exist.
Build automatically copies the produced binary to the vscode extension folder.
Updated the GPULang vscode extension readme.
Added license

--- a/gpulangserver/CMakeLists.txt
+++ b/gpulangserver/CMakeLists.txt
@@ -19,10 +19,22 @@ fips_begin_app(gpulang_server cmdline)
         languageserverapp.h
     )
 
+
     set_target_properties(gpulang_server PROPERTIES
         OUTPUT_NAME "gpulang_server${PLATFORM}"
     )
+
 fips_end_app()
+
+if (NOT DEPLOY)
+    set(EXTENSION_BIN_DIR "${CMAKE_SOURCE_DIR}/vscode-extension/bin")
+    add_custom_command(TARGET gpulang_server POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+            $<TARGET_FILE:gpulang_server>
+            "${EXTENSION_BIN_DIR}/$<TARGET_FILE_NAME:gpulang_server>"
+        COMMENT "Copying language server binary to vscode extension folder"
+    )
+endif()
 
 if (APPLE)
     add_custom_command(TARGET gpulang_server POST_BUILD
